saves/test/demo_full_20240802_193545/mux2to1/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp mux2to1_tb.v mux2to1.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
mux2to1_tb.v:85: $finish called at 16000 (1ps)

iverilog cmd 2 error:

